# oyez-scraping

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  count_all_audio.py  count_audio.py  count_audio_case_based.py  pyproject.toml  requirements.txt
.devcontainer/: Dockerfile  devcontainer.json  initializeCommand  postCreateCommand  postStartCommand
.github/: copilot-instructions.md
docs/api_investigation/: another_direct_case_lookup.json  api_notes.md  direct_case_lookup.json  direct_case_lookup_updated.json  oral_argument_updated.json  term_lookup_1_case.json  term_lookup_5_cases.json  term_lookup_multiple_cases.json
docs/designs/: api_client_refactoring.md  request_tracking.md
examples/: cache_explorer.py  investigate_pagination.py  pagination_demo.py  raw_data_demo.py  scrape_all_oyez.py
guidelines/: copilot-instructions.md  design.md  generic-instructions.md  oyez-agent-instructions.md  past-insights.md
src/: _version.py  api.py  audio.py  audio_io.py  models.py  scraper.py  utils.py
src/audio_stats/: __init__.py  collector.py  reporter.py
src/oyez_scraping/: __init__.py
src/oyez_scraping/cli/: __init__.py  download_cli.py
src/oyez_scraping/infrastructure/: __init__.py
src/oyez_scraping/infrastructure/api/: __init__.py  case_client.py  client.py  pagination_mixin.py  rate_limiter.py  tracked_client.py
src/oyez_scraping/infrastructure/exceptions/: __init__.py  api_exceptions.py  audio_exceptions.py  storage_exceptions.py
src/oyez_scraping/infrastructure/monitoring/: __init__.py  progress.py  request_logger.py  request_metadata.py  request_tracker.py
src/oyez_scraping/infrastructure/processing/: __init__.py  audio_downloader.py  (+1 more)
src/oyez_scraping/services/: __init__.py  download_service.py  raw_data_scraper.py
tests/: __init__.py  test_basic.py
tests/audio_stats/: __init__.py  test_collector.py  test_integration.py  test_integration_oyez.py  test_reporter.py
tests/integration/: __init__.py
tests/integration/cli/: test_download_cli.py
tests/integration/infrastructure/: __init__.py
tests/integration/services/: __init__.py  test_raw_data_scraper.py
tests/unit/: __init__.py
tests/unit/infrastructure/: __init__.py
tests/unit/services/: test_download_service.py
(+19 files in other folders)
