[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.envs.default]
installer = "uv"

[tool.hatch.version]
source = "vcs"
fallback-version = "0.0.0.dev0"
tag-pattern = '''^[a-z]+\/(?:[\w-]+-)?(?P<version>[vV]?\d+(?:\.\d+){0,2}[^\+]*)(?:\+.*)?$'''

[tool.hatch.build.hooks.vcs]
version-file = "src/_version.py"

[tool.ruff]
line-length = 88
extend-exclude = ["src/_version.py", "dev-pyproject/*"]
respect-gitignore = true

[tool.ruff.lint]
select = [
  "E4",
  "E7",
  "E9",
  "F",
  "B",
  "Q",
  "I",
  "ARG",
  "ANN",
  "D",
  "PL",
  "S",
  "RUF",
  "UP",
  "TC",
  "SIM",
]
ignore = ["PLR2004", "PLR0913", "ANN401", "S101", "S311"]

[tool.ruff.lint.pylint]
max-args = 10

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.pyright]
analyzeUnannotatedFunctions = true
reportMissingParameterType = "error"
reportUnusedImport = "error"
reportUnusedClass = "error"
reportUnusedFunction = "error"
reportUnusedVariable = "error"
extraPaths = ["./src"]

[tool.pytest.ini_options]
pythonpath = ["./", "./src"]
markers = ["integration: mark a test as an integration test."]

[tool.typos.files]
extend-exclude = ["**/*.env"]

[project]
dynamic = ["version"]
name = "oyez-scraping"
requires-python = ">=3.10.0"
authors = [{ name = "Alon Kellner", email = "me@alonkellner.com" }]
maintainers = [{ name = "Alon Kellner", email = "me@alonkellner.com" }]
description = "An oyez scraping project, demonstrating the vscode agent mode."
readme = "README.md"

keywords = []

classifiers = [
  "Development Status :: 3 - Alpha",

  "Intended Audience :: Science/Research",
  "Topic :: Multimedia :: Sound/Audio :: Analysis",

  "License :: OSI Approved :: MIT License",

  "Programming Language :: Python :: 3",
]

dependencies = [
  "aiohttp>=3.11.16",
  "beautifulsoup4>=4.13.3",
  "inquirer>=3.4.0",
  "numpy>=2.2.4",
  "pytest-cov>=6.1.0",
  "pytest-timeout>=2.3.1",
  "requests>=2.32.3",
  "torchaudio>=2.6.0",
  "tqdm>=4.67.1",
]

[dependency-groups]
dev = ["pytest", "pyright"]

[project.urls]
Homepage = "https://alonkellner.com"
Repository = "https://github.com/AlonKellner/oyez-scraping.git"
